feat: add customer information
