# internal/handler/auth_handler.go
@@ -43,7 +43,7 @@ func (h *authHandler) Login(ctx *fiber.Ctx) error {
 	data := h.service.Login(ctx.Context(), req)
 	return ctx.JSON(model.BaseResponse{
 		Code:    fiber.StatusOK,
-		Message: "Success verify login by google",
+		Message: "User logged in successfully",
 		Data:    data,
 	})
 }
@@ -56,8 +56,8 @@ func (h *authHandler) Login(ctx *fiber.Ctx) error {
 //	@Accept			json
 //	@Produce		json
 //	@Security		AccessToken
-//	@Success		200	{object}	model.BaseResponse	"Successful user info response"
-//	@Failure		401	{object}	model.BaseResponse	"Unauthorized error response"
+//	@Success		200	{object}	model.BaseResponse{data=model.AuthMe}	"Successful user info response"
+//	@Failure		401	{object}	model.BaseResponse						"Unauthorized error response"
 //	@Router			/v1/auth/me [get]
 func (h *authHandler) Me(ctx *fiber.Ctx) error {
 	user := new(model.AuthMe)
@@ -66,7 +66,7 @@ func (h *authHandler) Me(ctx *fiber.Ctx) error {
 
 	return ctx.JSON(model.BaseResponse{
 		Code:    fiber.StatusOK,
-		Message: "Success get user info",
+		Message: "Successfully retrieved user info",
 		Data:    user,
 	})
 }
