# internal/router.go
@@ -15,6 +15,7 @@ type router struct {
 type Router interface {
 	Home(handler handler.HomeHandler)
 	Auth(handler handler.AuthHandler)
+	Customer(handler handler.CustomerHandler)
 }
 
 func NewRouter(app *fiber.App, mid middleware.Middleware) Router {
@@ -32,4 +33,10 @@ func (r *router) Auth(handler handler.AuthHandler) {
 	auth := r.app.Group("v1/auth")
 	auth.Post("login", handler.Login)
 	auth.Get("me", r.mid.Auth(), handler.Me)
+}
+
+func (r *router) Customer(handler handler.CustomerHandler) {
+	customer := r.app.Group("v1/customer")
+	customer.Get("information", r.mid.Auth(), handler.Information)
+	customer.Get("tenor", r.mid.Auth(), handler.Tenor)
 }
